--- a/app/src/main/res/layout/item_komisi_jasa_lain.xml
+++ b/app/src/main/res/layout/item_komisi_jasa_lain.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/tools"
     android:id="@+id/cardView"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_marginLeft="7dp"
     android:layout_marginTop="4dp"
@@ -12,30 +11,54 @@
     android:layout_marginBottom="4dp"
     android:layout_weight="5"
     android:padding="10dp"
-    app:cardElevation="3dp"
+    app:cardElevation="2dp"
     app:cardCornerRadius="10dp">
 
-    <LinearLayout
+    <TableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
         android:padding="10dp"
-        android:orientation="vertical">
+        android:stretchColumns="*">
 
-        <TextView
-            android:id="@+id/tv_posisi_komisiJasaLain"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Posisi"
-            android:textStyle="bold" />
+        <TableRow>
 
-        <TextView
-            android:id="@+id/tv_komisi_komisiJasaLain"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="% Komisi"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/tv_posisi_komisiJasaLain"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Posisi"
+                android:textStyle="bold" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tv_kategoriPart_komisiJasaLain"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Kategori Part"
+                android:layout_gravity="end"
+                android:textStyle="bold" />
+
+        </TableRow>
+
+        <TableRow android:layout_marginTop="10dp">
+
+            <TextView
+                android:id="@+id/tv_aktifitas_komisiJasaLain"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:text="Aktifitas"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_komisi_komisiJasaLain"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="% Komisi"
+                android:layout_gravity="end"
+                android:textStyle="bold" />
+
+        </TableRow>
+
+    </TableLayout>
 
 </android.support.v7.widget.CardView>
