--- a/app/src/main/res/drawable/border_solid.xml
+++ b/app/src/main/res/drawable/border_solid.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <corners android:radius="10dp" />
+    <corners android:radius="8dp" />
     <padding
-        android:left="2dp"
-        android:right="2dp"
-        android:top="2dp"
-        android:bottom="2dp" />
+        android:left="0dp"
+        android:right="0dp"
+        android:top="0dp"
+        android:bottom="0dp" />
     <stroke
         android:width="2dp"
-        android:color="#CCCCCC" />
+        android:color="#ADAAAA" />
 </shape>
