--- a/app/src/main/res/layout/activity_atur_discount_part_.xml
+++ b/app/src/main/res/layout/activity_atur_discount_part_.xml
@@ -22,15 +22,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:background="@drawable/border_solid"
+                android:padding="10dp"
                 android:layout_marginTop="10dp">
 
                 <TextView
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:text="LOKASI LAYANAN"
-                    android:textStyle="bold"
-                    android:textSize="14sp"
-                    android:textColor="@color/grey_900"/>
+                    android:textSize="14sp" />
 
                 <CheckBox
                     android:id="@+id/cb_bengkel_discPart"
@@ -38,6 +38,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
+                    android:layout_marginStart="20dp"
                     android:text="BENGKEL"/>
 
                 <CheckBox
@@ -92,14 +93,15 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/border_solid"
+                android:padding="10dp"
+                android:gravity="center"
                 android:layout_marginTop="10dp">
 
                 <TextView
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:text="PEKERJAAN"
-                    android:textColor="@color/grey_900"
-                    android:textStyle="bold" />
+                    android:text="PEKERJAAN" />
 
                 <com.rkrzmail.srv.MultiSelectionSpinner
                     android:id="@+id/sp_pekerjaan_discPart"
@@ -157,14 +159,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:background="@drawable/border_solid"
+                android:padding="10dp"
                 android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:text="TANGGAL EFEKTIVE"
-                    android:textStyle="bold"
-                    android:textColor="@color/grey_900"/>
+                    android:text="TANGGAL EFEKTIVE" />
 
                 <TextView
                     android:id="@+id/tv_tglEffect_discPart"
@@ -211,6 +213,7 @@
                         android:text="SIMPAN"
                         android:layout_gravity="end"
                         android:layout_column="30"
+                        android:layout_marginStart="8dp"
                         android:textColor="@android:color/white" />
 
                 </TableRow>
