--- a/app/src/main/res/layout/activity_atur_frekwensi_discount.xml
+++ b/app/src/main/res/layout/activity_atur_frekwensi_discount.xml
@@ -2,36 +2,34 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:descendantFocusability="beforeDescendants"
-    android:focusableInTouchMode="true"
-    android:layout_height="match_parent">
+    android:focusableInTouchMode="true">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="5dp">
+            android:padding="10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp">
+                android:orientation="horizontal"
+                android:background="@drawable/border_solid"
+                android:gravity="center"
+                android:padding="10dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="PAKET LAYANAN"
-                    android:textStyle="bold" />
+                    android:text="PAKET LAYANAN" />
 
                 <Spinner
                     android:id="@+id/sp_paketLayanan_freDisc"
@@ -46,9 +44,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="10dp">
+                android:layout_marginTop="5dp">
 
                 <EditText
                     android:id="@+id/et_frekwensi_freDisc"
@@ -56,9 +52,9 @@
                     android:layout_height="wrap_content"
                     android:hint="FREKWENSI"
                     android:inputType="number"
-                    android:textSize="14sp"
                     android:maxLength="5"
-                    android:maxLines="1" />
+                    android:maxLines="1"
+                    android:textSize="14sp" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -66,9 +62,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="10dp">
+                android:layout_marginTop="5dp">
 
                 <EditText
                     android:id="@+id/et_disc_freDisc"
@@ -76,34 +70,34 @@
                     android:layout_height="wrap_content"
                     android:hint="DISCOUNT"
                     android:inputType="numberDecimal"
-                    android:textSize="14sp"
                     android:maxLength="5"
-                    android:maxLines="1" />
+                    android:maxLines="1"
+                    android:textSize="14sp" />
 
             </android.support.design.widget.TextInputLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:background="@drawable/border_solid"
+                android:gravity="center"
+                android:padding="10dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:text="TANGGAL EFEKTIVE"
-                    android:layout_weight="1"
-                    android:textStyle="bold" />
+                    android:text="TANGGAL EFEKTIVE" />
 
                 <TextView
                     android:id="@+id/tv_tglEffect_freDisc"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:drawableLeft="@drawable/icon_tanggal"
                     android:gravity="center"
-                    android:layout_weight="1"
+                    android:layout_marginStart="10dp"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -112,8 +106,8 @@
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:stretchColumns="*"
-                android:layout_marginTop="20dp">
+                android:layout_marginTop="20dp"
+                android:stretchColumns="*">
 
                 <TableRow>
 
@@ -122,24 +116,28 @@
                         android:id="@+id/btn_hapus_freDisc"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="start"
                         android:background="@drawable/btn_rounded_accent"
                         android:text="HAPUS"
-                        android:layout_gravity="start"
-                        android:visibility="gone"
-                        android:textColor="@color/white_transparency" />
+                        android:textColor="@android:color/white"
+                        android:visibility="gone" />
 
                     <Button
                         android:id="@+id/btn_simpan_freDisc"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_column="100"
+                        android:layout_gravity="end"
                         android:background="@drawable/btn_rounded_accent"
                         android:text="SIMPAN"
-                        android:layout_gravity="end"
-                        android:textColor="@color/white_transparency" />
+                        android:textColor="@android:color/white" />
 
                 </TableRow>
+
             </TableLayout>
+
         </LinearLayout>
+
     </ScrollView>
 
     <android.support.design.widget.AppBarLayout
@@ -148,13 +146,7 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-
-        <android.support.v7.widget.Toolbar
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
-            android:id="@+id/toolbar_atur_freDisc"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize" />
+        <include layout="@layout/toolbar" />
 
     </android.support.design.widget.AppBarLayout>
 
