--- a/app/src/main/res/layout/activity_atur_komisi_jasa_lain_.xml
+++ b/app/src/main/res/layout/activity_atur_komisi_jasa_lain_.xml
@@ -11,7 +11,6 @@
         android:layout_height="match_parent"
         app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -21,22 +20,20 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"
-                android:orientation="horizontal">
+                android:background="@drawable/border_solid"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="10dp">
 
                 <TextView
-                    android:layout_width="100dp"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/kategori_part_uppercase"
-                    android:textColor="@color/red_900"
-                    android:textStyle="bold" />
+                    android:text="@string/kategori_part_uppercase" />
 
                 <Spinner
                     android:id="@+id/sp_kategori_komisiJasaLain"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:textAlignment="center" />
@@ -46,18 +43,16 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"
-                android:orientation="horizontal">
+                android:background="@drawable/border_solid"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="10dp">
 
                 <TextView
-                    android:layout_width="100dp"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="AKTIVITAS"
-                    android:textColor="@color/red_900"
-                    android:textStyle="bold" />
+                    android:text="AKTIVITAS" />
 
                 <Spinner
                     android:id="@+id/sp_aktifitas_komisiJasaLain"
@@ -71,18 +66,16 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"
-                android:orientation="horizontal">
+                android:background="@drawable/border_solid"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="10dp">
 
                 <TextView
-                    android:layout_width="100dp"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textColor="@color/grey_80"
-                    android:text="NAMA POSISI"
-                    android:textStyle="bold" />
+                    android:text="NAMA POSISI" />
 
                 <com.rkrzmail.srv.MultiSelectionSpinner
                     android:id="@+id/sp_namaPosisi_komisiJasaLain"
@@ -97,16 +90,15 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="10dp">
+                android:layout_marginTop="5dp">
 
                 <EditText
                     android:id="@+id/et_komisi_komisiJasaLain"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="KOMISI"
-                    android:maxLines="1"
+                    android:inputType="numberDecimal"
+                    android:maxLength="5"
                     android:textSize="14sp" />
 
             </android.support.design.widget.TextInputLayout>
@@ -114,11 +106,11 @@
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:stretchColumns="*">
 
                 <TableRow>
-
 
                     <Button
                         android:id="@+id/btn_hapus_komisiJasaLain"
@@ -126,16 +118,17 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/btn_rounded_accent"
                         android:text="HAPUS"
-                        android:visibility="gone"
-                        android:textColor="@android:color/white" />
+                        android:textColor="@android:color/white"
+                        android:visibility="gone" />
 
                     <Button
                         android:id="@+id/btn_simpan_komisiJasaLain"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_column="20"
+                        android:layout_gravity="end"
                         android:background="@drawable/btn_rounded_accent"
                         android:text="SIMPAN"
-                        android:layout_column="20"
                         android:textColor="@android:color/white" />
 
                 </TableRow>
@@ -152,12 +145,7 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_atur_komisiJasaLain"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+        <include layout="@layout/toolbar" />
 
     </android.support.design.widget.AppBarLayout>
 
