--- a/app/src/main/res/layout/activity_atur_rekening_.xml
+++ b/app/src/main/res/layout/activity_atur_rekening_.xml
@@ -132,7 +132,7 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/btn_rounded_accent"
                         android:textColor="@android:color/white"
-                        android:layout_column="20"
+                        android:layout_column="50"
                         android:text="@string/simpan_uppercase" />
 
                 </TableRow>
@@ -148,12 +148,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_atur_rekening"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+        <include layout="@layout/toolbar" />
 
     </android.support.design.widget.AppBarLayout>
 
