--- a/app/src/main/res/layout/activity_lokasi_part.xml
+++ b/app/src/main/res/layout/activity_lokasi_part.xml
@@ -17,7 +17,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_lokasi_part"
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="?attr/colorPrimary"
