--- a/app/src/main/res/layout/activity_pengisian_part_keluar_.xml
+++ b/app/src/main/res/layout/activity_pengisian_part_keluar_.xml
@@ -12,66 +12,46 @@
         android:layout_height="match_parent"
         app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="5dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/penggunaan_uppercase"
-                    android:textStyle="bold" />
-
-                <Spinner
-                    android:id="@+id/sp_penggunaan_partKeluar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:entries="@array/lokasi"
-                    android:textAlignment="center" />
-
-            </LinearLayout>
+            android:padding="10dp">
 
             <android.support.design.widget.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="10dp"
-                android:visibility="gone">
+                android:layout_marginTop="5dp">
+
+                <EditText
+                    android:id="@+id/et_stock_partKeluar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="STOCK"
+                    android:textSize="14sp"
+                    android:enabled="false" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp">
 
                 <EditText
                     android:id="@+id/et_jumlah_partKeluar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/jumlah_uppercase"
+                    android:hint="JUMLAH MINTA"
+                    android:textSize="14sp"
+                    android:inputType="number"
                     android:maxLines="1" />
 
             </android.support.design.widget.TextInputLayout>
 
-
-            <Button
-                android:id="@+id/btn_lanjut_partKeluar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_gravity="end"
-                android:background="@drawable/btn_rounded_accent"
-                android:text="@string/lanjut_uppercase"
-                android:textColor="@android:color/white" />
+            <include layout="@layout/layout_btn_simpan_hapus" />
 
         </LinearLayout>
     </ScrollView>
@@ -82,13 +62,7 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-
-        <android.support.v7.widget.Toolbar
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
-            android:id="@+id/toolbar_atur_partKeluar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize" />
+        <include layout="@layout/toolbar" />
 
     </android.support.design.widget.AppBarLayout>
 
