--- a/app/src/main/res/layout/item_frekwensi_disc.xml
+++ b/app/src/main/res/layout/item_frekwensi_disc.xml
@@ -4,7 +4,7 @@
     xmlns:card_view="http://schemas.android.com/tools"
     android:id="@+id/cardView"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_marginLeft="7dp"
     android:layout_marginTop="4dp"
@@ -12,7 +12,7 @@
     android:layout_marginBottom="4dp"
     android:layout_weight="5"
     android:padding="10dp"
-    app:cardElevation="5dp"
+    app:cardElevation="2dp"
     app:cardCornerRadius="10dp">
 
 
@@ -20,8 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:paddingRight="10dp"
-        android:paddingLeft="10dp"
+        android:padding="15dp"
         android:stretchColumns="*">
 
         <TableRow>
@@ -42,7 +41,7 @@
 
         </TableRow>
 
-        <TableRow>
+        <TableRow android:layout_marginTop="10dp">
 
             <TextView
                 android:id="@+id/tv_disc_freDisc"
