--- a/app/src/main/res/layout/item_komisi_layanan.xml
+++ b/app/src/main/res/layout/item_komisi_layanan.xml
@@ -12,7 +12,7 @@
     android:layout_marginBottom="4dp"
     android:layout_weight="5"
     android:padding="10dp"
-    app:cardElevation="3dp"
+    app:cardElevation="2dp"
     app:cardCornerRadius="10dp">
 
     <LinearLayout
@@ -34,6 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Layanan"
+            android:layout_marginTop="5dp"
             android:textStyle="bold" />
 
         <TextView
@@ -41,6 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="% Komisi"
+            android:layout_marginTop="5dp"
             android:textStyle="bold" />
 
     </LinearLayout>
