--- a/app/src/main/res/layout/item_layanan.xml
+++ b/app/src/main/res/layout/item_layanan.xml
@@ -4,7 +4,7 @@
     xmlns:card_view="http://schemas.android.com/tools"
     android:id="@+id/cardView"
     android:layout_width="match_parent"
-    android:layout_height="90dp"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_marginLeft="7dp"
     android:layout_marginTop="4dp"
@@ -12,7 +12,7 @@
     android:layout_marginBottom="4dp"
     android:layout_weight="5"
     android:padding="10dp"
-    app:cardElevation="3dp"
+    app:cardElevation="2dp"
     app:cardCornerRadius="10dp">
 
     <LinearLayout
@@ -39,15 +39,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textSize="17sp"
                     android:text="Jenis Layanan"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_nama_layanan"
                     android:layout_width="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:textStyle="bold"
                     android:text="Nama Layanan"
                     android:textSize="14sp" />
 
@@ -55,6 +56,8 @@
                     android:id="@+id/tv_lokasi_layanan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:textStyle="bold"
                     android:layout_weight="1"
                     android:text="Lokasi"
                     android:textSize="14sp" />
@@ -65,6 +68,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Status"
+                    android:layout_marginTop="5dp"
+                    android:textStyle="bold"
                     android:textSize="14sp" />
 
 
